--- a/in-cluster/minikube-demo-samplebackend/deployment.yaml
+++ b/in-cluster/minikube-demo-samplebackend/deployment.yaml
@@ -25,6 +25,8 @@ spec:
         app.kubernetes.io/instance: samplebackend
     spec:
       restartPolicy: Always
+      imagePullSecrets:
+        - name: dockerconfigjson
       containers:
         - name: samplebackend
           image: hostmachine:5000/minikube-demo_samplebackend:latest
