--- a/in-cluster/minikube-demo-samplefrontend/deployment.yaml
+++ b/in-cluster/minikube-demo-samplefrontend/deployment.yaml
@@ -25,6 +25,8 @@ spec:
         app.kubernetes.io/instance: samplefrontend
     spec:
       restartPolicy: Always
+      imagePullSecrets:
+        - name: dockerconfigjson
       containers:
         - name: samplefrontend
           image: hostmachine:5000/minikube-demo_samplefrontend:latest
