Try LoadBalancer type

--- a/in-cluster/minikube-demo-samplebackend/service.yaml
+++ b/in-cluster/minikube-demo-samplebackend/service.yaml
@@ -11,6 +11,7 @@ spec:
   selector:
     app: samplebackend
     app.kubernetes.io/instance: samplebackend
+  type: LoadBalancer
   ports:
     - name: web
       port: 80
